<resources>
    <string name="app_name">Reminder Call</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_alarm_times_or_places_you_want_to_remind_specific_people_when_you_re_nearby">Add alarm times or places you want to remind specific people when you\'re nearby</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_phone_number"><font size="14"> Enter phone number</font></string>
    <string name="call_reminder">Call Reminder</string>
    <string name="expln_phse_1">Fill out appointment list with the possibility to make each appointment periodic and link it to a specific location</string>
    <string name="phse_1">Times</string>
    <string name="phse_2">Contacts</string>
    <string name="expln_phse_2">Provide contact list for each appointment with the possibility to set message text for it</string>
    <string name="phse_3">Configurations</string>
    <string name="expln_phse_3">Customize the default settings such as time tolerance,spatial tolerance,SMS message and audio alarm</string>
    <string name="save_chnge_lbl">Save changes</string>
    <string name="save_chnge_question">Are you sure you want to save these changes?</string>
    <string name="select_ringtone">Select ringtone</string>
    <string name="phone_not_empty">Phone number could not be empty</string>
    <string name="phone_not_duplicated">Phone number should not be duplicated</string>
    <string name="reset_contact_list">Reset contact list</string>
    <string name="reset_contact_list_question">Are you sure you want to reset contact list for this time?</string>
    <string name="search">Search...</string>
    <string name="what_look_for">What are you looking for...?</string>
    <string name="delete_time">Delete Time</string>
    <string name="delete_time_question">Are you sure you want to delete this Time?</string>
    <string name="temporal_spatial_correlation">Temporal spatial correlation</string>
    <string name="time_tolerance_min">Time Tolerance (min)</string>
    <string name="spatial_tolerance_m">Spatial Tolerance (m)</string>
    <string name="enter_value">Enter value</string>
    <string name="audio_alarm">Audio Alarm</string>
    <string name="ringtone_alarm">Ringtone Alarm</string>
    <string name="sms_message">SMS message</string>
    <string name="pause_reminder_service_today">Pause reminder service today</string>
    <string name="general_settings">General Settings</string>
    <string name="run">Run</string>
    <string name="reset">Reset</string>
    <string name="add_time">Add time</string>
    <string name="periodic">Add periodic time</string>

    <string name="reminder_message">Reminder message</string>
    <string name="enter_the_message_which_you_want_to_be_sent">Enter the message which you want to be sent</string>
    <string name="enter_message">Enter message...</string>
    <string name="select_contact">Select contact...</string>
    <string name="reset_contacts">Reset contacts</string>
    <string name="set_message">Set message</string>
    <string name="about_us">About us</string>
    <string name="save">Save</string>
    <string name="_next" >Next</string>
    <string name="home_page">Home Page</string>
    <string name="info">Info</string>
    <string name="this_phase_has_not_activate_yet">This phase has not activated yet</string>
    <string name="warning">Warning</string>
    <string name="please_enter_one_time_at_the_list">Please enter one time at the least</string>
    <string name="location_selected">Location selected</string>
    <string name="view_message">View message</string>
    <string name="Please_select_contact_list_for_all_your_times">Please select contact list for all your times</string>
</resources>
