<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:id="@+id/mainView"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context=".View.ConfigurationActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"



            >
    <LinearLayout
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:background="@drawable/borders"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_marginTop="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/time_tolerance_min"
        android:layout_width="0dp"
        android:layout_weight="0.9"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="18dp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:id="@+id/time_tolerance_min"
        android:hint="@string/enter_value"
        android:maxLength="2"
        android:inputType="number"
        android:textSize="14dp"
        android:background="@drawable/borders"
        android:layout_height="32dp"
        />
</LinearLayout>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/spatial_tolerance_m"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:hint="@string/enter_value"
            android:id="@+id/spatial_tolerance_m"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="14dp"
            android:background="@drawable/borders"
            android:layout_height="32dp"
            />
    </LinearLayout>
    </LinearLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:text="@string/temporal_spatial_correlation"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="30dp" android:textColor="@android:color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"




        >
        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/borders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_marginStart="-8dp"
            android:layout_marginLeft="-8dp"
            android:id="@+id/audio_alarm"
            android:buttonTint="@drawable/checkbox"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/audio_alarm"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content" />
    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/ringtone_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>
                <EditText
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    style="@style/SpinnerTheme"
                    android:layout_height="32dp"
                    />
                <ImageButton
                    android:src="@drawable/ic_play_arrow_black_24dp"
                    android:background="@android:color/transparent"
                    android:layout_width="24dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/play_btn"
                    android:layout_height="24dp" />
            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_marginStart="-8dp"
            android:layout_marginLeft="-8dp"
            android:id="@+id/sms_message"
            android:layout_width="wrap_content"
            android:buttonTint="@drawable/checkbox"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/sms_message"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_marginStart="-8dp"
            android:layout_marginLeft="-8dp"
            android:id="@+id/pause_reminder_service_today"
            android:layout_width="wrap_content"
            android:buttonTint="@drawable/checkbox"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/pause_reminder_service_today"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content" />
    </LinearLayout>-->
        </LinearLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:text="@string/general_settings"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:layout_marginLeft="30dp" android:textColor="@android:color/black" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="16dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"


            android:background="@drawable/mybutton"
            android:textColor="@android:color/white"
            android:id="@+id/reset_btn"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"

            android:textAllCaps="false"
            android:text="@string/reset"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"


            android:background="@drawable/mybutton"
            android:textColor="@android:color/white"
            android:id="@+id/run_btn"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAllCaps="false"

            android:text="@string/run"/>

    </LinearLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        >
        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_reminder"
            />
    </RelativeLayout>
</LinearLayout>